<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easter Hunt</string>
    

	<string name="select">Select</string>

    <string name="level">LEVEL: </string>

    <string name="paused">P A U S E D</string>

    <string name="eggs"> EGGS LEFT</string>
    
    
    <string name="game_over_1">Great work, you got: </string>    
    
    <string name="game_over_3">Happy Easter!!!!!!</string>
    
    <string name="rematch">Rematch</string>
    
    <string name="about_1">Thanks to:</string>
    <string name="about_2">Developed by Simon Ohlmer</string>
    <string name="about_3">Graphics by Daniela Maria Kvisler Barreiro</string>
    
</resources>
